# yocto-a1

./: Animal.cpp  Animal.h  CMakeCache.txt  CMakeLists.txt  Dog.cpp  Dog.hpp  Makefile  README.md  animal  cmake_install.cmake  main.cpp
